[개발] 멤버 관련 비즈니스 로직 개발 완료(멤버 CRUD 관련)

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"> <div class="footer" th:fragment="footer">
+<html xmlns:th="http://www.thymeleaf.org">
+<div class="footer" th:fragment="footer">
     <p>&copy; 이윤복</p>
 </div>
