--- a/src/main/resources/templates/members/createMemberForm.html
+++ b/src/main/resources/templates/members/createMemberForm.html
@@ -9,17 +9,19 @@
 <body>
 <div class="container">
     <div th:replace="fragments/bodyHeader :: bodyHeader"/>
-    <form role="form" action="/members/new" th:object="${memberForm}" method="post">
+    <form role="form" action="/members/new" th:object="${member}" method="post">
         <div class="form-group">
-            <label th:for="name">계정</label>
+            <label th:for="account">계정</label>
             <!-- th:field : name -> id = name, name = name -->
-            <input type="text" th:field="*{name}" class="form-control" placeholder="이름을 입력하세요"
-                   th:class="${#fields.hasErrors('name')}? 'form-control fieldError' : 'form-control'">
-            <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Incorrect date</p>
+            <input type="text" th:field="*{account}" class="form-control" placeholder="계정을 입력하세요">
         </div>
         <div class="form-group">
             <label th:for="password">비밀번호</label>
-            <input type="text" th:field="*{password}" class="form-control" placeholder="비밀번호를 입력하세요">
+            <input type="password" th:field="*{password}" class="form-control" placeholder="비밀번호를 입력하세요">
+        </div>
+        <div class="form-group">
+            <label th:for="name">별명</label>
+            <input type="text" th:field="*{name}" class="form-control" placeholder="별명 입력하세요">
         </div>
         <div class="form-group">
             <label th:for="city">도시</label>
@@ -32,7 +34,8 @@
         <div class="form-group">
             <label th:for="zipcode">우편번호</label>
             <input type="text" th:field="*{zipcode}" class="form-control"
-                   placeholder="우편번호를 입력하세요"></div>
+                   placeholder="우편번호를 입력하세요">
+        </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
     <br/>
