--- a/src/main/resources/templates/members/createMemberForm.html
+++ b/src/main/resources/templates/members/createMemberForm.html
@@ -11,23 +11,14 @@
     <div th:replace="fragments/bodyHeader :: bodyHeader"/>
     <form role="form" action="/members/new" th:object="${member}" method="post">
         <div class="form-group">
-            <label th:for="account">계정</label>
-            <!-- th:field : name -> id = name, name = name -->
-            <input type="text" th:field="*{account}" class="form-control" placeholder="계정을 입력하세요"
-                   th:class="${#fields.hasErrors('account')}? 'form-control fieldError' : 'form-control'">
-            <p th:if="${#fields.hasErrors('account')}" th:errors="*{account}">Incorrect date</p>
-        </div>
-        <div class="form-group">
-            <label th:for="password">비밀번호</label>
-            <input type="password" th:field="*{password}" class="form-control" placeholder="비밀번호를 입력하세요"
-                    th:class="${#fields.hasErrors('password')}? 'form-control fieldError' : 'form-control'">
-            <p th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Incorrect date</p>
-        </div>
-        <div class="form-group">
             <label th:for="name">별명</label>
             <input type="text" th:field="*{name}" class="form-control" placeholder="별명을 입력하세요"
                    th:class="${#fields.hasErrors('name')}? 'form-control fieldError' : 'form-control'">
             <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Incorrect date</p>
+        </div>
+        <div class="form-group">
+            <label th:for="picture">프로필 이미지</label>
+            <input type="image" th:field="*{picture}" class="form-control">
         </div>
         <div class="form-group">
             <label th:for="city">도시</label>
@@ -39,8 +30,7 @@
         </div>
         <div class="form-group">
             <label th:for="zipcode">우편번호</label>
-            <input type="text" th:field="*{zipcode}" class="form-control"
-                   placeholder="우편번호를 입력하세요">
+            <input type="text" th:field="*{zipcode}" class="form-control" placeholder="우편번호를 입력하세요">
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
