[수정] 세션 정보 있으면 상단에 정보 출력되도록 수정

--- a/src/main/resources/templates/fragments/bodyHeader.html
+++ b/src/main/resources/templates/fragments/bodyHeader.html
@@ -4,4 +4,16 @@
     <a href="/">
         <h3 class="text-muted">옷장 서포터</h3>
     </a>
+
+    <div class="navbar-dark">
+        <div th:if="${session.user == null}" class ="nav-tabs">
+            <a class="btn btn-lg btn-info" href="/oauth2/authorization/google">로그인</a>
+        </div>
+
+        <div th:if="${session.user != null}" class ="member-name-label">
+            <img class="figure-img" th:src="${session.user.getPicture()}"> &nbsp;
+            <td class="member-summary" th:text="${session.user.getName() + '님'}"></td>
+            <a class="btn btn-lg btn-info" href="">로그아웃</a>
+        </div>
+    </div>
 </div>
