[개발] 옷장 등록 화면 이동 링크 추가

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -14,7 +14,7 @@
         <p class="lead">옷 메뉴</p>
         <p>
             <a class="btn btn-lg btn-info" href="/order">나만의 옷장 보기</a>
-            <a class="btn btn-lg btn-info" href="/orders/me">나만의 옷장 등록</a>
+            <a class="btn btn-lg btn-info" href="/wardrobes/save">나만의 옷장 등록</a>
         </p>
 
         <p class="lead">통계 메뉴</p>
