[개발] wardrobe 등록 js파일 추가

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,5 +1,7 @@
-<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <div class="footer" th:fragment="footer">
-    <p>&copy; 이윤복</p>
+    <p>&copy;Copyright 이윤복. 나만의 옷장 v1</p>
+
+    <!--wardrobe.js 추가-->
+    <script src="/js/app/wardrobes.js"></script>
 </div>
