--- a/src/main/resources/templates/fragments/bodyHeader.html
+++ b/src/main/resources/templates/fragments/bodyHeader.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <div class="header" th:fragment="bodyHeader">
+
     <a href="/">
-        <h3 class="text-muted">옷장 서포터</h3>
+        <h3 class="text-muted">나만의 옷장</h3>
     </a>
 
     <div class="navbar-dark">
