[개발] 홈 화면에서 wardrobe 리스트 화면 이동 버튼 추가

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,8 +3,6 @@
 <head th:replace="fragments/header :: header">
     <title>Hello</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <script>
-    </script>
 </head>
 <body>
 <div class="container">
@@ -24,7 +22,7 @@
         </p>
         <p class="lead">커뮤니티 메뉴</p>
         <p>
-            <a class="btn btn-lg btn-info" href="/items/new">모두의 옷장 구경하기</a>
+            <a class="btn btn-lg btn-info" href="/wardrobes?page_number=1">모두의 옷장 구경하기</a>
             <a class="btn btn-lg btn-info" href="/items/me">모두의 코디 구경하기</a>
         </p>
     </div>
