[개발] 나만의 옷장 보기 이동 기능 개발

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -11,7 +11,7 @@
     <div class="jumbotron"> <h2>쇼핑 서비스</h2>
         <p class="lead">옷 메뉴</p>
         <p>
-            <a class="btn btn-lg btn-info" href="/order">나만의 옷장 보기</a>
+            <a class="btn btn-lg btn-info" href="/member/wardrobe">나만의 옷장 보기</a>
             <a class="btn btn-lg btn-info" href="/wardrobes/save">나만의 옷장 등록</a>
         </p>
 
