--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -8,22 +8,22 @@
 <div class="container">
     <div th:replace="fragments/bodyHeader :: bodyHeader" />
 
-    <div class="jumbotron"> <h2>쇼핑 서비스</h2>
+    <div class="jumbotron">
         <p class="lead">옷 메뉴</p>
         <p>
-            <a class="btn btn-lg btn-info" href="/member/wardrobe">나만의 옷장 보기</a>
-            <a class="btn btn-lg btn-info" href="/wardrobes/save">나만의 옷장 등록</a>
+            <a class="btn btn-lg btn-dark" href="/member/wardrobe">나만의 옷장 보기</a>
+            <a class="btn btn-lg btn-dark" href="/wardrobes/save">나만의 옷장 등록</a>
         </p>
 
         <p class="lead">통계 메뉴</p>
         <p>
-            <a class="btn btn-lg btn-info" href="/items/new">나만의 통계 보기</a>
-            <a class="btn btn-lg btn-info" href="/items/me">모두의 통계 보기</a>
+            <a class="btn btn-lg btn-dark" href="/items/new">나만의 통계 보기</a>
+            <a class="btn btn-lg btn-dark" href="/items/me">모두의 통계 보기</a>
         </p>
         <p class="lead">커뮤니티 메뉴</p>
         <p>
-            <a class="btn btn-lg btn-info" href="/wardrobes?page_number=1">모두의 옷장 구경하기</a>
-            <a class="btn btn-lg btn-info" href="/items/me">모두의 코디 구경하기</a>
+            <a class="btn btn-lg btn-dark" href="/wardrobes?page_number=1">모두의 옷장 구경하기</a>
+            <a class="btn btn-lg btn-dark" href="/items/me">모두의 코디 구경하기</a>
         </p>
     </div>
 
