--- a/src/main/resources/templates/wardrobe/wardrobe-detail-view.html
+++ b/src/main/resources/templates/wardrobe/wardrobe-detail-view.html
@@ -18,7 +18,7 @@
         <br/>
 
         <div class="form-group">
-            <input type="button" class="btn btn-primary" id="btn-likecnt-change"
+            <input type="button" class="btn btn-dark" id="btn-likecnt-change"
                    th:value="${wardrobe.likeUser}==true ? '좋아요 취소 ' + ${wardrobe.likeCnt} : '좋아요 ' + ${wardrobe.likeCnt}"/>
         </div>
 
@@ -31,13 +31,14 @@
                 <td th:text="${comment.member.name}"></td>
                 <td th:text="${comment.content}"></td>
                 <td th:text="${comment.createdDate}"></td>
+                <td><input type="button" th:if="${comment.member.email == session.user.email}" class="btn btn-dark" name="btn-comment-delete" th:id="'btn-comment-delete' + ${comment.id}" value="삭제"/></td>
             </tr>
             </tbody>
         </table>
 
         <div class="form-group">
             <input type="text" class="form-control" id="comment-content" placeholder="댓글을 입력하세요.">
-            <input type="button" class="btn btn-primary" id="btn-comment-save" value="등록" style="float: right; margin-top:2px;"/>
+            <input type="button" class="btn btn-dark" id="btn-comment-save" value="등록" style="float: right; margin-top:2px;"/>
         </div>
     </form>
 
