--- a/src/main/resources/templates/wardrobe/wardrobe-detail-view.html
+++ b/src/main/resources/templates/wardrobe/wardrobe-detail-view.html
@@ -12,7 +12,7 @@
 
         <div class="form-group">
             <label th:for="image">옷장 내부</label>
-            <img th:src="${wardrobe.image.imageS3Path}" class="form-control" style="height: 400px;">
+            <img th:src="${wardrobe.image.imagePath}" class="form-control" style="height: 400px;">
         </div>
 
         <br/>
