--- a/src/main/resources/templates/cloth/cloth-save.html
+++ b/src/main/resources/templates/cloth/cloth-save.html
@@ -32,6 +32,7 @@
                     <option value="겉옷">겉옷</option>
                     <option value="신발">신발</option>
                     <option value="악세서리">악세서리</option>
+                    <option value="가방">가방</option>
                 </select>
             </div>
 
@@ -46,7 +47,7 @@
             </div>
 
             <div class="form-group">
-                <label for="cloth_color">종류를 선택해주세요.</label>
+                <label for="cloth_color">색상을 선택해주세요.</label>
                 <select name="cloth_color" id="cloth_color" class="form-control">
                     <option value="블루">블루</option>
                     <option value="네이비">네이비</option>
@@ -54,6 +55,10 @@
                     <option value="화이트">화이트</option>
                     <option value="블랙">블랙</option>
                     <option value="베이지">베이지</option>
+                    <option value="그린">그린</option>
+                    <option value="파랑">파랑</option>
+                    <option value="아이보리">아이보리</option>
+                    <option value="데님">데님</option>
                 </select>
             </div>
 
