--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -4,4 +4,5 @@
 
     <!--wardrobe.js 추가-->
     <script src="/js/app/wardrobes.js"></script>
+    <script src="/js/app/clothes.js"></script>
 </div>
