[개발] 옷 상세보기 화면 개발

--- a/src/main/resources/templates/cloth/cloth-list.html
+++ b/src/main/resources/templates/cloth/cloth-list.html
@@ -16,7 +16,9 @@
             <tbody>
             <tr th:each="cloth : ${wardrobe.clothes}">
                 <td>
-                    <img src="http://localhost:8080/image/example_image.jpeg" style="height:100px;">
+                    <a th:href="@{/cloth/{id} (id=${cloth.id})}">
+                        <img src="http://localhost:8080/image/example_image.jpeg" style="height:100px;">
+                    </a>
 <!--                    <a href="#" th:text="${cloth.images.get(0)}"></a>-->
                 </td>
                 <td th:text="${cloth.clothName}"></td>
