--- a/src/main/resources/templates/wardrobe/wardrobe-detail-view.html
+++ b/src/main/resources/templates/wardrobe/wardrobe-detail-view.html
@@ -1,13 +1,13 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments/header :: header" />
+<head th:replace="fragments/header :: header"></head>
 <body>
 <div class="container">
-    <div th:replace="fragments/bodyHeader :: bodyHeader"/>
+    <div th:replace="fragments/bodyHeader :: bodyHeader"></div>
     <form th:object="${wardrobe}">
         <div class="form-group">
             <label th:for="name">옷장 이름</label>
-            <span th:text="${wardrobe.name}" class="form-control"/>
+            <span th:text="${wardrobe.name}" class="form-control"></span>
         </div>
 
         <div class="form-group">
@@ -26,7 +26,7 @@
 
         <table class="table table-striped">
             <tbody>
-            <label>코멘트</label>
+            <label>코디 기록</label>
             <tr th:each="comment : *{comments}" >
                 <td th:text="${comment.member.name}"></td>
                 <td th:text="${comment.content}"></td>
@@ -43,7 +43,7 @@
     </form>
 
     <br/>
-    <div th:replace="fragments/footer :: footer" />
+    <div th:replace="fragments/footer :: footer"></div>
 </div> <!-- /container -->
 
 <input type="hidden" id="wardrobe_id" th:value="${wardrobe.id}">
