--- a/src/main/resources/templates/cloth/cloth-detail-view.html
+++ b/src/main/resources/templates/cloth/cloth-detail-view.html
@@ -38,7 +38,7 @@
         <br/>
 
         <div class="form-group">
-            <input type="button" class="btn btn-dark" id="btn-record-likecnt-change"
+            <input type="button" class="btn btn-dark" id="btn-cloth-like-change"
                    th:value="${cloth.likeUser==true} ? '좋아요 취소 ' + ${cloth.likeCnt} : '좋아요 ' + ${cloth.likeCnt}"/>
         </div>
 
@@ -48,18 +48,28 @@
             <tbody>
             <label>기록</label>
             <tr th:each="record : *{records}" >
+                <td></td>
                 <td th:text="${record.getSubject()}"></td>
                 <td th:text="${record.getContent()}"></td>
-                <td th:text="${record.getCreatedDate()}"></td>
-<!--                <td><input type="button" th:if="${comment.member.email == session.user.email}" class="btn btn-dark" name="btn-comment-delete" th:id="'btn-comment-delete' + ${comment.id}" value="삭제"/></td>-->
+                <td th:text="${record.getCreatedDate().getYear()} + '년 '
+                + ${record.getCreatedDate().getMonthValue()} + '월 '
+                + ${record.getCreatedDate().getDayOfMonth()} + '일'"></td>
+                <td>
+                    <input type="button" th:if="${record.member.email == session.user.email}" class="btn btn-dark" name="btn-record-delete" th:id="'btn-record-delete' + ${record.id}" value="삭제"/>
+                </td>
             </tr>
             </tbody>
         </table>
 
+        <br/>
+
         <div class="form-group">
+            <label for="record-image">해당 품목에 대한 나만의 코디를 보여주세요 :)</label>
+            <img src="http://localhost:8080/image/example_image.jpeg" class="form-control" style="height: 150px; width:150px">
+            <input type="image" value="image/example_image.jpeg" class="form-control" id="record-image" hidden>
             <input type="text" class="form-control" id="record-subject" placeholder="제목을 입력하세요.">
-            <input type="text" class="form-control" id="record-content" placeholder="내용을 입력하세요.">
-            <input type="button" class="btn btn-dark" id="btn-record-save" value="등록" style="float: right; margin-top:2px;"/>
+            <textarea class="form-control" id="record-content" placeholder="내용을 입력하세요."></textarea>
+            <input type="button" class="btn btn-dark" id="btn-record-save" value="등록" style="float: right; margin-top:2px;">
         </div>
     </form>
 
