--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,20 +9,20 @@
     <div th:replace="fragments/bodyHeader :: bodyHeader" />
 
     <div class="jumbotron">
-        <p class="lead">옷 메뉴</p>
+        <p class="lead">옷장을 이쁘게 꾸며보세요</p>
         <p>
             <a class="btn btn-lg btn-dark" href="/member/wardrobe">나만의 옷장 보기</a>
         </p>
 
-        <p class="lead">통계 메뉴</p>
+        <p class="lead">사람들은 주로 무슨 옷을 입을까요?</p>
         <p>
-            <a class="btn btn-lg btn-dark" href="/items/new">나만의 통계 보기</a>
-            <a class="btn btn-lg btn-dark" href="/items/me">모두의 통계 보기</a>
+            <a class="btn btn-lg btn-dark" href="/items/new">나만의 선호도</a>
+            <a class="btn btn-lg btn-dark" href="/items/me">모두의 선호도</a>
         </p>
-        <p class="lead">커뮤니티 메뉴</p>
+        <p class="lead">다른 사람들과 나만의 옷장을 공유하세요!</p>
         <p>
             <a class="btn btn-lg btn-dark" href="/wardrobes?page_number=1">모두의 옷장 구경하기</a>
-            <a class="btn btn-lg btn-dark" href="/items/me">모두의 코디 구경하기</a>
+            <a class="btn btn-lg btn-dark" href="/records">모두의 코디 구경하기</a>
         </p>
     </div>
 
