--- a/src/main/resources/templates/cloth/cloth-list.html
+++ b/src/main/resources/templates/cloth/cloth-list.html
@@ -30,7 +30,7 @@
         </table>
 
         <div class="form-group">
-            <a class="btn btn-dark" th:href="@{/wardrobe/{id}/clothes/add (id=${wardrobe.id})}"}>옷 등록하기</a>
+            <a class="btn btn-dark" th:if="${wardrobe.member.email == session.user.email}" th:href="@{/wardrobe/{id}/clothes/add (id=${wardrobe.id})}"}>옷 등록하기</a>
         </div>
 
     </div>
