[개발] 좋아요 가장 많은 옷장 이름 옆에 왕관 표시 출력되도록 수정

--- a/src/main/resources/templates/wardrobe/wardrobes-list.html
+++ b/src/main/resources/templates/wardrobe/wardrobes-list.html
@@ -13,8 +13,9 @@
             </tr>
             </thead>
             <tbody>
-            <tr th:each="wardrobe : ${wardrobes}">
+            <tr th:each="wardrobe, idx : ${wardrobes}">
                 <td>
+                    <span th:if="${idx.index == 0}" style="font-size:30px;">👑경</span>
                     <a href="#" th:text="${wardrobe.name}" th:href="@{/wardrobes/{id} (id=${wardrobe.id})}"></a>
                 </td>
                 <td th:text="${wardrobe.clothes.size()}"></td>
