--- a/src/main/resources/templates/wardrobe/wardrobe-detail-view.html
+++ b/src/main/resources/templates/wardrobe/wardrobe-detail-view.html
@@ -12,7 +12,7 @@
 
         <div class="form-group">
             <label th:for="image">옷장 내부를 보고싶으면 클릭해보세요.</label>
-            <img th:src="${wardrobe.image.imagePath}" id="wardrobe_image_view" class="form-control" style="height: 400px;">
+            <img th:src="${wardrobe.image == null ? 'http://localhost:8080/image/no_image.png' : wardrobe.image.imagePath}" id="wardrobe_image_view" class="form-control" style="height: 400px;">
         </div>
 
         <br/>
