--- a/src/main/resources/templates/wardrobe/wardrobes-list.html
+++ b/src/main/resources/templates/wardrobe/wardrobes-list.html
@@ -15,7 +15,7 @@
             <tbody>
             <tr th:each="wardrobe, idx : ${wardrobes}">
                 <td>
-                    <span th:if="${idx.index == 0}" style="font-size:30px;">👑경</span>
+                    <span th:if="${idx.index == 0}" style="font-size:30px;">👑</span>
                     <a href="#" th:text="${wardrobe.name}" th:href="@{/wardrobes/{id} (id=${wardrobe.id})}"></a>
                 </td>
                 <td th:text="${wardrobe.clothes.size()}"></td>
