--- a/src/main/resources/templates/cloth/cloth-save.html
+++ b/src/main/resources/templates/cloth/cloth-save.html
@@ -18,9 +18,8 @@
             </div>
 
             <div class="form-group">
-                <label for="image">사진을 선택해주세요. (최대 8장)</label>
-                <img src="http://localhost:8080/image/example_image.jpeg" class="form-control" style="height: 400px; ">
-                <input type="image" value="image/example_image.jpeg" class="form-control" id="image" hidden>
+                <label for="file">아이템을 대표할 사진을 선택해주세요.</label>
+                <input type="file" class="form-control" name="file" id="file">
             </div>
 
             <div class="form-group">
