[수정] wardrobe 관련 html 수정
Wardrobe의 JSON 구조가 변경됨에 따라 클라이언트 내부도 변경되었음

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -21,7 +21,7 @@
         </p>
         <p class="lead">다른 사람들과 나만의 옷장을 공유하세요!</p>
         <p>
-            <a class="text-body" href="/wardrobes?page_number=1"><span style="font-size:30px;">‍👩‍👧‍👦</span>모두의 옷장 구경하기</a> <br/>
+            <a class="text-body" href="/wardrobes"><span style="font-size:30px;">‍👩‍👧‍👦</span>모두의 옷장 구경하기</a> <br/>
             <a class="text-body" href="/records"> <span style="font-size:30px;">👫</span>모두의 코디 구경하기</a>
         </p>
     </div>
