--- a/src/main/resources/templates/wardrobe/wardrobes-save.html
+++ b/src/main/resources/templates/wardrobe/wardrobes-save.html
@@ -18,8 +18,8 @@
             </div>
 
             <div class="form-group">
-                <label for="upload-image-form">옷장을 대표할 사진을 등록해주세요.</label>
-                <form method="POST" enctype="multipart/form-data" id="upload-image-form" class="custom-file-input">
+                <form method="POST" enctype="multipart/form-data" id="upload-image-form">
+                    <label for="file">옷장을 대표할 사진을 등록해주세요.</label>
                     <input type="file" class="form-control" name="file" id="file">
                 </form>
             </div>
