--- a/src/main/resources/templates/cloth/cloth-detail-view.html
+++ b/src/main/resources/templates/cloth/cloth-detail-view.html
@@ -51,14 +51,16 @@
 
         <table class="table table-striped">
             <tbody>
-            <label th:text="${cloth.member.name} + '님 만의 코디를 구경해보세요!'"></label>
+            <label th:text="${cloth.member.name} + '님 만의 ' + ${cloth.clothName} + ' 코디를 구경해보세요!'"></label>
             <tr th:each="record : *{records}" >
-                <td></td>
-                <td th:text="${record.getSubject()}"></td>
-                <td th:text="${record.getContent()}"></td>
-                <td th:text="${record.getCreatedDate().getYear()} + '년 '
-                + ${record.getCreatedDate().getMonthValue()} + '월 '
-                + ${record.getCreatedDate().getDayOfMonth()} + '일'"></td>
+                <td><img th:src="${record.image == null ? '/image/no_image.png' : record.image.imageServerPath}" id="record_image_view" class="form-control" style="height: 200px; width: 200px"></td>
+                <td>
+                    <span class="font-weight-bolder" th:text="${record.getSubject()}"></span> <br/>
+                    <span class="font-weight-lighter" th:text="${record.getCreatedDate().getYear()} + '년 '
+                    + ${record.getCreatedDate().getMonthValue()} + '월 '
+                    + ${record.getCreatedDate().getDayOfMonth()} + '일'" style="font-size: 9px;"></span>
+                    <p th:text="${record.getContent()}" style="margin-top: 15px; font-size: 12px;"></p>
+                </td>
                 <td>
                     <input type="button" th:if="${record.member.email == session.user.email}" class="btn btn-dark" name="btn-record-delete" th:id="'btn-record-delete' + ${record.id}" value="삭제"/>
                 </td>
@@ -69,9 +71,13 @@
         <br/>
 
         <div class="form-group" th:if="${cloth.member.email == session.user.email}">
-            <label for="record-image" th:text="'해당 품목에 대한 ' + ${cloth.member.name} + '님만의 코디를 보여주세요 :)'"></label>
-            <img src="http://localhost:8080/image/example_image.jpeg" class="form-control" style="height: 150px; width:150px">
-            <input type="image" value="image/example_image.jpeg" class="form-control" id="record-image" hidden>
+            <label th:text="'해당 품목에 대한 ' + ${cloth.member.name} + '님만의 코디를 보여주세요 :)'"></label>
+            <div class="form-group">
+                <form method="POST" enctype="multipart/form-data" id="upload-image-form">
+                    <label for="file">옷장을 대표할 사진을 등록해주세요.</label>
+                    <input type="file" class="form-control" name="file" id="file">
+                </form>
+            </div>
             <input type="text" class="form-control" id="record-subject" placeholder="제목을 입력하세요."> <br/>
             <textarea class="form-control" id="record-content" placeholder="내용을 입력하세요."></textarea>
             <input type="button" class="btn btn-dark" id="btn-record-save" value="등록" style="float: right; margin-top:2px;">
