--- a/src/main/resources/templates/wardrobe/wardrobe-detail-view.html
+++ b/src/main/resources/templates/wardrobe/wardrobe-detail-view.html
@@ -15,10 +15,8 @@
             <img th:src="${wardrobe.image == null ? 'http://localhost:8080/image/no_image.png' : wardrobe.image.imageServerPath}" id="wardrobe_image_view" class="form-control" style="height: 400px;">
         </div>
 
-        <br/>
-
         <div class="form-group">
-            <input type="button" class="btn btn-dark" id="btn-likecnt-change" th:disabled="${session.user.email == wardrobe.member.email} ? true : false"
+            <input type="button" class="btn btn-dark small" id="btn-likecnt-change" th:disabled="${session.user.email == wardrobe.member.email} ? true : false"
                    th:value="${wardrobe.likeUser==true} ? '좋아요 취소 ' + ${wardrobe.likeCnt} : '좋아요 ' + ${wardrobe.likeCnt}"/>
         </div>
 
@@ -26,24 +24,28 @@
 
         <table class="table table-striped">
             <tbody>
-            <label>옷장에 대한 감상평을 남겨주세요! :)</label>
+            <label style="font-weight: bolder">옷장에 대한 감상평을 남겨주세요!</label>
             <tr th:each="comment : *{comments}" >
                 <td th:text="${comment.member.name}"></td>
                 <td th:text="${comment.content}"></td>
                 <td th:text="${comment.getCreatedDate().getYear()} + '년 '
                 + ${comment.getCreatedDate().getMonthValue()} + '월 '
                 + ${comment.getCreatedDate().getDayOfMonth()} + '일'"></td>
-                <td><input type="button" th:if="${comment.member.email == session.user.email}" class="btn btn-dark" name="btn-comment-delete" th:id="'btn-comment-delete' + ${comment.id}" value="삭제"/></td>
+                <td>
+                    <input type="button" th:if="${comment.member.email == session.user.email}" class="btn btn-dark small" name="btn-comment-delete" th:id="'btn-comment-delete' + ${comment.id}" value="삭제"/>
+                </td>
             </tr>
             </tbody>
         </table>
 
         <div class="form-group">
-            <input type="text" class="form-control" id="comment-content" placeholder="댓글을 입력하세요.">
-            <input type="button" class="btn btn-dark" id="btn-comment-save" value="등록" style="float: right; margin-top:2px;"/>
+            <input type="text" class="form-control" id="comment-content" placeholder="감상평을 입력하세요.">
+            <input type="button" class="btn btn-dark small" id="btn-comment-save" value="등록" style="float: right; margin-top:2px;"/>
         </div>
     </form>
 
+    <br/>
+    <br/>
     <br/>
     <div th:replace="fragments/footer :: footer"></div>
 </div> <!-- /container -->
