--- a/src/main/resources/templates/cloth/cloth-list.html
+++ b/src/main/resources/templates/cloth/cloth-list.html
@@ -3,7 +3,7 @@
 <div class="container">
     <div th:replace="fragments/bodyHeader :: bodyHeader"/>
     <div>
-        <table class="table table-striped">
+        <table class="table">
             <thead>
             <tr>
                 <th>사진</th>
@@ -29,7 +29,7 @@
         </table>
 
         <div class="form-group">
-            <a class="btn btn-dark" th:if="${wardrobe.member.email == session.user.email}" th:href="@{/wardrobe/{id}/clothes/add (id=${wardrobe.id})}"}>옷 등록하기</a>
+            <a class="btn btn-dark small" th:if="${wardrobe.member.email == session.user.email}" th:href="@{/wardrobe/{id}/clothes/add (id=${wardrobe.id})}"}>옷 등록하기</a>
         </div>
 
     </div>
