--- a/src/main/resources/templates/wardrobe/wardrobes-save.html
+++ b/src/main/resources/templates/wardrobe/wardrobes-save.html
@@ -20,8 +20,11 @@
             <div class="form-group">
                 <form method="POST" enctype="multipart/form-data" id="upload-image-form">
                     <label for="file">옷장을 대표할 사진을 등록해주세요.</label>
-                    <input type="file" class="form-control" name="file" id="file">
-                </form>
+                    <input id="uploadFile" disabled="disabled"/>
+                    <div id="file-form" class="fileUpload btn btn-dark small">
+                        <span>이미지 선택</span>
+                        <input type="file" id="file" class="upload" />
+                    </div>                </form>
             </div>
 
             <div class="form-group">
