--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -16,7 +16,7 @@
 
         <p class="lead">사람들은 주로 무슨 옷을 입을까요?</p>
         <p>
-            <a class="text-body" href="/items/new"><span style="font-size:30px;">👍</span>나만의 선호도 알아보기</a> <br/>
+            <a class="text-body" href="/statistics/me"><span style="font-size:30px;">👍</span>나만의 선호도 알아보기</a> <br/>
             <a class="text-body" href="/statistics"><span style="font-size:30px;">🙌</span>모두의 선호도 알아보기</a>
         </p>
         <p class="lead">다른 사람들과 나만의 옷장을 공유하세요!</p>
